src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Dept_Name__c</fullName>
        <label>Dept Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HOD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HOD</label>
        <referenceTo>Teacher__c</referenceTo>
        <relationshipLabel>Department</relationshipLabel>
        <relationshipName>Department</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Count__c</fullName>
        <label>Student Count</label>
        <summaryForeignKey>Student__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subject_Count__c</fullName>
        <label>Subject Count</label>
        <summaryForeignKey>SubjectDept__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Teacher_Count__c</fullName>
        <label>Teacher Count</label>
        <summaryForeignKey>Teacher__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Dept-{00}</displayFormat>
        <label>Department Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Department</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>